# ai-orchestrator

./: .coverage  .env.example  .gitignore  .librechat-secrets  .test_env  BACKUP_README.md  README.md  SYSTEM_DIAGNOSTICS.md  TODO_cloud_strategy.md  WALKTHROUGH_FIXES.md  agent_runner_profile_1767960755.json  ai.code-workspace  backup_to_github.sh  chaos_chat_test.py  check_db_config.py  conftest.py  current_health.json  debug_h100.py  debug_indexing.py  debug_maitre_d.py  debug_prompt.py  debug_router_config.py  debug_routes.py  dev-start.sh  edsbrain.md  farm_network_notes.txt  fix_launchd_wrappers.sh  force_ingest.py  gateway-compile.sh  get_all_models.py  git.sh  history.txt  install_backup_alias.sh  keep_open.sh  latency_test.py  librechat-docker-compose-portainer.yaml  librechat-docker-compose.yaml  librechat-fix-config.sh  librechat-portainer-prep.sh  librechat-setup.sh  (+63 more)
.agent/: rules_of_engagement.md
.github/: copilot-instructions.md
ED/: IMPORTANT.md  README.md
agent_runner/: __init__.py  agent_runner.py  agrent_runner.py  app.py  background_tasks.py  cache_helpers.py  cache_manager.py  config.py  config_manager.py  config_validator.py  constants.py  conversation_state.py  dashboard_tracker.py  db_client.py  db_utils.py  engine.py  executor.py  fast_selector.py  feedback.py  hallucination_detector.py  health_monitor.py  install_dependencies.sh  intent.py  knowledge_base.py  lazy_mcp_loader.py.disabled  location.py  main.py  maintenance_tasks.py  maitre_d_cache.json  marketplace.py  mcp_parser.py  mcp_tasks.py  memory_cache.py  memory_client.py  models.py  (+36 more)
(+1811 files in other folders)
