[project]
name = "ai-gateway"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "PyYAML",
    "pydantic",
    "uvicorn",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "surrealdb>=1.0.7",
    "python-multipart>=0.0.21",
    "watchdog",
    "mcp",
    "tenacity>=9.1.2",
]

